# pulp-web

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/: settings.local.json
bff/: Dockerfile  pyproject.toml
bff/app/: config.py  deps.py  main.py  pulp.py  schemas.py  service.py
bff/app/routers/: repos.py  system.py  tasks.py
deploy/compose/: compose.yml
deploy/compose/nginx/: dev.conf
deploy/compose/settings/: settings.py
deploy/compose/tools/: Dockerfile
docs/: AGENT_DEV.md  DEPLOYMENT.md  SPEC.md  TROUBLESHOOTING.md  VERIFICATION.md
fixtures/tiny-deb/dists/tiny/: Release
fixtures/tiny-rpm/repodata/: a3b88382c4453bdb5916563606ca7822a148cc2422b7cad7a72722607a70a3a2-filelists.sqlite.bz2  d31ebee5a6d794227fc51c1fad03f99354a8d5c19f08f83016a7ef75308394a5-other.sqlite.bz2  eac10a208e629dd24574dd9da1d022d78d35c14d3f5761c9e7aa5a562b93a362-primary.sqlite.bz2  repomd.xml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/docker/: 40-runtime-config.sh
frontend/public/: config.js
frontend/src/: App.tsx  api.ts  hooks.ts  index.css  main.tsx  types.ts
frontend/src/components/: ClientConfigModal.tsx  RepoForm.tsx  StateBadge.tsx
frontend/src/pages/: Dashboard.tsx  Repos.tsx  Tasks.tsx
scripts/: build-fixtures.sh  gen-env.sh  seed-fixtures.sh  smoke.sh  status.sh
tests/api/: conftest.py  test_bff.py
tests/e2e/: helpers.ts  package-lock.json  package.json  playwright.config.ts
tests/e2e/specs/: app.spec.ts
tests/unit/: conftest.py  test_api.py  test_service.py
(+3 files in other folders)
