[project]
name = "mirror-bff"
version = "0.1.0"
description = "Lab mirror BFF — 前端專用 API,封裝 Pulp REST API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 慣用法:Depends/Query 於參數預設值呼叫
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]
